# langchain-course

./: .gitignore  README.md
01-hello-world/: README.md  main.py
02-search-agent/: 1-main.py  2-main.py  3-main.py  README.md  pyproject.toml
03-agents-under-the-hood/: 1_agent_loop_langchain_tool_calling.py  2_agent_loop_raw_function_calling.py  3_raw_react_prompt.py  README.md  pyproject.toml
04-rag-gist/: .env  README.md  main.py
05-documentation-helper/: README.md
06-react-agent-function-calling/: .env  README.md  main.py  nodes.py  pyproject.toml  react.py
07-reflection-agent/: .env  README.md  chains.py  main.py  pyproject.toml
08-reflexion-agent/: .env  README.md  chains.py  main.py  pyproject.toml  schemas.py  test_type.py  tool_executor.py
09-agentic-rag/: README.md  ingestion.py  main.py  pyproject.toml
09-agentic-rag/graph/: consts.py  graph.py  state.py
09-agentic-rag/graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py  router.py
09-agentic-rag/graph/chains/tests/: test_chains.py
09-agentic-rag/graph/nodes/: __init__.py  generate.py  grade_documents.py  retrieve.py  web_search.py
09-agentic-rag/tests/: test_graph_integration.py
10-langchain-mcp-adapters/: .gitignore  README.md  main.py  pyproject.toml
10-langchain-mcp-adapters/servers/: math_server.py  weather_server.py
50-mcp-search-agent/: README.md  main.py  pyproject.toml  server.py
