[project]
name = "09-agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.9",
    "langchain>=1.3.2",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langchain-tavily>=0.2.18",
    "langchainhub>=0.1.21",
    "langgraph>=1.2.2",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.25",
]

[tool.pyright]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["E402"]
"graph/graph.py" = ["E402"]
"ingestion.py" = ["E402"]
"graph/nodes/web_search.py" = ["E402"]
